@@ -2,7 +2,7 @@
 if [ $# -eq 0 ]
   then
     echo "No arguments supplied, expected public IP of this node"
-    echo "Usage sudo ./install.sh [public IP]"
+    echo "Usage sudo ./install.sh {public IP}"
     exit 1
 fi
 chmod +x /var/www/html/udr/bill/index.html
